# coverage2txt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
samples/: cov1.xml
src/: cli.yml  main.rs
