[package]
name = "coverage2txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version ="2.34", features = ["yaml"] }
log = { version ="0.4" }
simple-error = { version = "0.3.0" }
xmltree = "0.10.3"
